[package]
name = "toql_mock_db"
version = "0.3.0"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Mock database for Toql"
keywords = ["toql", "mock"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"


[dependencies]
toql = { git="https://github.com/roy-ganz/toql.git", branch="v0.3"  }

async-trait = "0.1"


tracing= "0.1"



[patch.'https://github.com/roy-ganz/toql.git']
toql= {path="../toql"}

